--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ width: 100%;
 margin: 0px;
 }
 
-#status
+#status,#number_objects
 {
 font-size: 18px;
 }
@@ -17,4 +17,5 @@ font-size: 18px;
 canvas{
     border-radius: 10px;
     box-shadow: 10px 10px 10px grey;
+    margin-top: 30px;
 }
