--- a/style.css
+++ b/style.css
@@ -1,21 +1,26 @@
 body{
     background-size: cover;
-    background-position: center;
 }
-.heading
-{
+.heading{
 font-size: 23px;
 width: 100%;
 margin: 0px;
 }
-
-#status,#number_objects
-{
+#start,#number_of_objects{
 font-size: 18px;
 }
-
 canvas{
+    border: 2px solid white;
     border-radius: 10px;
-    box-shadow: 10px 10px 10px grey;
-    margin-top: 30px;
+    margin-top: 130px;
+    box-shadow: 5px 5px 5px white;
+}
+.copy_right_footer{
+    position: fixed;
+    color: white;
+    bottom: 0;
+    width: 100%;
+    background-color: gray;
+    line-height: 2;
+    text-align: center;
 }
